Got rid of bullet points and fixed text alignment on spreadsheet data

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -84,6 +84,16 @@ h2 {
 	margin-left: auto;
 	margin-right: auto;
 }
+#details{
+	text-align: left !important;
+}
+li{
+	list-style: none;
+}
+#name{
+	color: yellow;
+	font-size: 25px;
+}
 @media only screen and (max-width: 431px) {
 	ion-toolbar{
 		text-align: center;
@@ -170,5 +180,9 @@ h2 {
 		width: 70vw;
 		margin-left: auto;
 		margin-right: auto;
+	}
+	#details{
+		text-align: left !important;
+		font-size: 18px;
 	}
 }
